--- a/_includes/dataCard/_a11y.njk
+++ b/_includes/dataCard/_a11y.njk
@@ -25,7 +25,7 @@
         description: "How quickly the contents of a page are visibly populated."
     }
 } %}
-    <section class="items-center flex flex-col bg-slate-400">
+    <section class="items-center flex flex-col bg-slate-300">
         <h2 class="">{{params.title}} 
         </h2>
 
@@ -33,58 +33,114 @@
             <div class="flex flex-col m-4 p-4 w-2/3 border border-solid border-primary-core-blue rounded-lg bg-light-gray">
 
                 <h2 class="text-2xl">{{data.page}}</h2>
-
-                <div class="flex">
-
-                    <div class="w-1/2">
-                        <h3 class="text-xl mb-1"> Automated Accessibility Reports from Google Lighthouse</h3>
-                        <p class="text-sm m-0">
+                
+                <div class="flex">{# links and total failures cars area  #}
+                    <div class="w-1/2 flex flex-col">
+                        <h3 class="text-xl mb-1">Automated Accessibility Reports</h3>
+                        <p class="text-sm">
                             <em>for {{data.url}}
                             </em>
                         </p>
-                        <a class="border border-solid rounded-xl bg-primary-core-blue text-white p-3" href="/reports/{{data.mobilelink}}">Full Mobile Report <span class="sr-only">for {{data.page}}</span></a>
+                        <a class="border border-solid rounded-xl bg-primary-core-blue text-white p-3 my-1" href="/reports/{{data.mobilelink}}">
+                            IBM Equal Access Full Report <span class="sr-only">for {{data.page}}</span>
+                        </a>
+
+                        <a class="border border-solid rounded-xl bg-primary-core-blue text-white p-3 my-1" href="/reports/{{data.mobilelink}}">
+                            Pa11y Full Report <span class="sr-only">for {{data.page}}</span>
+                        </a>
+
+                        <a class="border border-solid rounded-xl bg-primary-core-blue text-white p-3 my-1" href="/reports/{{data.mobilelink}}">
+                            Google Lighthouse Full Report <span class="sr-only">for {{data.page}}</span
+                        ></a>
+
                     </div>
 
-                    <div class="flex justify-center items-center px-8 py-4 m-4 border border-solid border-primary-core-blue rounded-xl bg-white">
-                        <p class="flex flex-col items-center text-center">
-                            <span class="font-bold text-xl">Mobile Score</span>
-                            <span 
+                    <div class="w-1/2">
+                        <h3 class="text-xl mb-1 text-center">Total Number of Automated WCAG Failures</h3>
+                        <div class="flex justify-center items-center px-8 py-4 m-4 border border-solid border-primary-core-blue rounded-xl bg-white">
+                            <p class="flex flex-col items-center text-center">
+                                <span class="font-bold text-xl"> Failures</span>
+                                <span 
+                                    class="
+                                        text-4xl font-medium"
+                                >
+
+                                    {{data.mobile.performance_score}}
+
+                                    
+
+                                </span>
+                            </p>
+                        </div>
+                        <div class="flex justify-center items-center px-8 py-4 m-4 border border-solid border-primary-core-blue rounded-xl bg-white">
+                            <p class="flex flex-col items-center text-center">
+                                <span class="font-bold text-xl">Recommended / Needs Review
+                                </span>
+                                <span 
+                                    class="
+                                        text-4xl font-medium"
+                                >
+
+                                    {{data.mobile.performance_score}}
+
+                                    
+
+                                </span>
+                            </p>
+                        </div>
+                    </div>
+
+                </div>
+
+                <div class="flex flex-col items-center">{# lighthouse summary scores area #}
+                    <h3 class="text-xl mb-1">Google Lighthouse Summary Scores </h3>
+                    <div class="flex justify-evenly w-full">
+                        <div class="flex flex-col items-center">
+                            <h4 class="text-lg text-black">Accessibility</h4>
+                            <div 
                                 class="
-                                    text-4xl font-medium 
-                                    {% if data.mobile.performance_score >= 89 %} text-success-green {% endif %}
-                                    {% if data.mobile.performance_score >= 50 and data.mobile.performance_score <= 88 %} text-warning-orange {% endif %}
-                                    {% if data.mobile.performance_score >= 0 and data.mobile.performance_score <= 49 %} text-dark-red-alert {% endif %}
+                                    text-4xl font-medium border border-solid p-2 rounded-xl bg-gray-200
+                                    {% if data.accessibility >= 89 %} text-success-green {% endif %}
+                                    {% if data.accessibility >= 50 and data.accessibility <= 88 %} text-warning-orange {% endif %}
+                                    {% if data.accessibility >= 0 and data.accessibility <= 49 %} text-dark-red-alert {% endif %}
                                     "
                             >
+                                    {{data.accessibility}}
+                                    <span class="text-xl text-black"> / 100 </span>
 
-                                {{data.mobile.performance_score}}
-
-                                <span class="text-lg"> / 100 </span>
-
-                            </span>
-                        </p>
-                    </div>
-
-                    <div class="flex justify-center items-center px-8 py-4 m-4 border border-solid border-primary-core-blue rounded-xl bg-white">
-                        <p class="flex flex-col items-center">
-                            <span class="font-bold text-xl">Desktop Score</span>
-                            <span 
+                            </div>
+                        </div>
+                        <div class="flex flex-col items-center">
+                            <h4 class="text-lg text-black">SEO</h4>
+                            <div 
                                 class="
-                                    text-4xl font-medium 
-                                    {% if data.desktopscore >= 89 %} text-success-green {% endif %}
-                                    {% if data.desktopscore >= 50 and data.desktopscore <= 88 %} text-warning-orange {% endif %}
-                                    {% if data.desktopscore >= 0 and data.desktopscore <= 49 %} text-dark-red-alert {% endif %}
+                                    text-4xl font-medium border border-solid p-2 rounded-xl bg-gray-200
+                                    {% if data.seo >= 89 %} text-success-green {% endif %}
+                                    {% if data.seo >= 50 and data.seo <= 88 %} text-warning-orange {% endif %}
+                                    {% if data.seo >= 0 and data.seo <= 49 %} text-dark-red-alert {% endif %}
                                     "
                             >
+                                    {{data.seo}}
+                                    <span class="text-xl text-black"> / 100 </span>
 
-                                {{data.desktopscore}}
+                            </div>
+                        </div>
+                        <div class="flex flex-col items-center">
+                            <h4 class="text-lg text-black">Best Practices</h4>
+                            <div 
+                                class="
+                                    text-4xl font-medium border border-solid p-2 rounded-xl bg-gray-200
+                                    {% if data.bestpractice >= 89 %} text-success-green {% endif %}
+                                    {% if data.bestpractice >= 50 and data.bestpractice <= 88 %} text-warning-orange {% endif %}
+                                    {% if data.bestpractice >= 0 and data.bestpractice <= 49 %} text-dark-red-alert {% endif %}
+                                    "
+                            >
+                                    {{data.bestpractice}}
+                                    <span class="text-xl text-black"> / 100 </span>
 
-                                <span class="text-lg"> / 100 </span>
-
-                            </span>
-                        </p>
+                            </div>
+                        </div>
                     </div>
-
                 </div>
             </div>
 
