--- a/_includes/dataCard/_template.njk
+++ b/_includes/dataCard/_template.njk
@@ -418,7 +418,7 @@
 
     </section>
 
-{% elif params.type === "a11y-lighthouse" %}
-{% include './_a11y.njk' %}
+{% elif params.type === "a11y" %}
+    {% include './_a11y.njk' %}
 
 {% endif %}
