add path to files

--- a/_includes/dataCard/_a11y.njk
+++ b/_includes/dataCard/_a11y.njk
@@ -41,11 +41,11 @@
                             <em>for {{data.url}}
                             </em>
                         </p>
-                        <a class="border border-solid rounded-xl bg-primary-core-blue text-white p-3 my-1" href="/reports/accessibility/pa11y/{data.mobilelink}}">
+                        <a class="border border-solid rounded-xl bg-primary-core-blue text-white p-3 my-1" href="/reports/accessibility/IBM/{{data.IBM}}">
                             IBM Equal Access Full Report <span class="sr-only">for {{data.page}}</span>
                         </a>
 
-                        <a class="border border-solid rounded-xl bg-primary-core-blue text-white p-3 my-1" href="/reports/accessibility/pa11y/{{data.mobilelink}}">
+                        <a class="border border-solid rounded-xl bg-primary-core-blue text-white p-3 my-1" href="/reports/accessibility/pa11y/{{data.pally}}">
                             Pa11y Full Report <span class="sr-only">for {{data.page}}</span>
                         </a>
 
@@ -53,7 +53,7 @@
                             Pa11y Summary for All Pages<span class="sr-only">for all pages</span>
                         </a>
 
-                        <a class="border border-solid rounded-xl bg-primary-core-blue text-white p-3 my-1" href="/reports/accessibility/pa11y/{{data.mobilelink}}">
+                        <a class="border border-solid rounded-xl bg-primary-core-blue text-white p-3 my-1" href="/reports/accessibility/lighthouse/{{data.lighthouse}}">
                             Google Lighthouse Full Report <span class="sr-only">for {{data.page}}</span
                         ></a>
 
