--- a/audits/ogs/accessibility-automated.njk
+++ b/audits/ogs/accessibility-automated.njk
@@ -12,8 +12,9 @@ data: ogs.a11y
 
 {{
     dataCard({
-        title:"Automated Reports",
+        title:"Automated Testing Accessibility Reports",
         type:"a11y",
-        dataSource: ogs.a11y
+        dataSource: ogs.a11y,
+        summary:"For each of the five pages that were testing using automated tools there are two separate report cards. In each report card there is a list of total failures and recommendations as well as links to view the full expanded reports that have additional details. Google Lighthouse Scores for Accessibility, SEO, Best Practices are listed at the bottom of each card for reference. The NYS Digital Service cautions that automated tools can produce conflicting results, often leading clients to believe that their WCAG conformance status is significantly better than it is. Automated testing in any form can only check for about 30% of real WCAG failures. A manual audit by a trained professional is the only way to address many substantive accessibility issues. "
     })
 }}
