--- a/_includes/dataCard/_template.njk
+++ b/_includes/dataCard/_template.njk
@@ -31,7 +31,7 @@
 
 {% if params.type === "performance" %}
 
-    <section class="flex flex-col gap-8 mt-6 m-4 items-center">
+    <section class="flex flex-col gap-8 mt-6 m-4 items-center bg-primary-core-blue/10 rounded-lg p-4">
         <h2 class="">{{params.title}}
         </h2>
 
@@ -40,7 +40,7 @@
 
                 <h2 class="text-2xl">{{data.page}}</h2>
 
-                <div class="flex">
+                <div class="flex flex-wrap">
 
                     <div class="w-1/2">
                         <h3 class="text-xl mb-1"> Lighthouse Performance Reports </h3>
@@ -111,7 +111,7 @@
                     <div class="flex flex-wrap flex-col grid-cols-1 lg:grid-cols-2 justify-items-center gap-4">
 
                         {# First Contentful Paint #}
-                        <div x-data="{ fcp: false }" class="flex flex-col items-center px-4 py-3 border border-solid border-primary-core-blue rounded-lg bg-light-gray cursor-pointer">
+                        <div x-data="{ fcp: false }" class="flex flex-col items-center px-4 py-3 border border-solid border-primary-core-blue rounded-lg bg-white cursor-pointer">
                         <button
             class="flex flex-col grid-cols-1 items-center px-4 py-3 border border-solid border-primary-core-blue rounded-lg hover:bg-quaternary-blue hover:text-white bg-white cursor-pointer focus:border-solid focus:border-2 focus:border-yellow-500"
             @click="fcp = !fcp"
@@ -140,7 +140,7 @@
             
                 
                         {# Largest Contentful Paint #}
-                        <div x-data="{ lcp: false }" class="flex flex-col items-center px-4 py-3 border border-solid border-primary-core-blue rounded-lg bg-light-gray cursor-pointer ">
+                        <div x-data="{ lcp: false }" class="flex flex-col items-center px-4 py-3 border border-solid border-primary-core-blue rounded-lg bg-white cursor-pointer ">
                         <button
             class="flex flex-col grid-cols-1 items-center px-4 py-3 border border-solid border-primary-core-blue hover:bg-quaternary-blue hover:text-white rounded-lg bg-white cursor-pointer focus:border-solid focus:border-2 focus:border-yellow-500"
             @click="lcp = !lcp"
@@ -167,7 +167,7 @@
             </div>
                         </div>
                         {# Total Blocking Time #}
-                        <div x-data="{ tbt: false }" class="flex flex-col items-center px-4 py-3 border border-solid border-primary-core-blue rounded-lg bg-light-gray cursor-pointer">
+                        <div x-data="{ tbt: false }" class="flex flex-col items-center px-4 py-3 border border-solid border-primary-core-blue rounded-lg bg-white cursor-pointer">
                         <button
             class="flex flex-col items-center px-4 py-3 border border-solid border-primary-core-blue hover:bg-quaternary-blue hover:text-white rounded-lg bg-white cursor-pointer focus:border-solid focus:border-2 focus:border-yellow-500"
             @click="tbt = !tbt"
@@ -192,7 +192,7 @@
             </div>
                         </div>
                         {# Cumulative Layout Shift #}
-                        <div x-data="{ cls: false }" class="flex flex-col items-center px-4 py-3 border border-solid border-primary-core-blue rounded-lg bg-light-gray cursor-pointer">
+                        <div x-data="{ cls: false }" class="flex flex-col items-center px-4 py-3 border border-solid border-primary-core-blue rounded-lg bg-white cursor-pointer">
                         <button
             class="flex flex-col items-center px-4 py-3 border border-solid border-primary-core-blue hover:bg-quaternary-blue hover:text-white rounded-lg bg-white cursor-pointer focus:border-solid focus:border-2 focus:border-yellow-500"
             @click="cls = !cls"
@@ -218,7 +218,7 @@
             </div>
                         </div>
                         {# Speed Index #}
-                        <div x-data="{ si: false }" class="flex flex-col items-center px-4 py-3 border border-solid border-primary-core-blue rounded-lg bg-light-gray cursor-pointer">
+                        <div x-data="{ si: false }" class="flex flex-col items-center px-4 py-3 border border-solid border-primary-core-blue rounded-lg bg-white cursor-pointer">
                         <button
                 class="flex flex-col items-center px-4 py-3 border border-solid border-primary-core-blue hover:bg-quaternary-blue hover:text-white rounded-lg bg-white cursor-pointer focus:border-solid focus:border-2 focus:border-yellow-500"
                 @click="si = !si"
@@ -253,7 +253,7 @@
                     <p>Click on a metric for additional details.</p>
 
                         {# First Contentful Paint #}
-                        <div x-data="{ fcp: false }" class="flex flex-col items-center px-4 py-3 rounded-lg border border-solid border-primary-core-blue  bg-light-gray cursor-pointer">
+                        <div x-data="{ fcp: false }" class="flex flex-col items-center px-4 py-3 rounded-lg border border-solid border-primary-core-blue  bg-white cursor-pointer">
                         <button
             class="flex flex-col items-center px-4 py-3 border border-solid border-primary-core-blue hover:bg-quaternary-blue hover:text-white rounded-lg bg-white cursor-pointer focus:border-solid focus:border-2 focus:border-yellow-500"
             @click="fcp = !fcp"
@@ -281,7 +281,7 @@
                         </div>
 
                         {# Largest Contentful Paint #}
-                        <div x-data="{ lcp: false }" class="flex flex-col items-center px-4 py-3 border border-solid border-primary-core-blue rounded-lg bg-light-gray cursor-pointer">
+                        <div x-data="{ lcp: false }" class="flex flex-col items-center px-4 py-3 border border-solid border-primary-core-blue rounded-lg bg-white cursor-pointer">
                         <button
             class="flex flex-col items-center px-4 py-3 border border-solid border-primary-core-blue hover:bg-quaternary-blue hover:text-white rounded-lg bg-white cursor-pointer focus:border-solid focus:border-2 focus:border-yellow-500"
             @click="lcp = !lcp"
@@ -308,7 +308,7 @@
             </div>
                         </div>
                         {# Total Blocking Time #}
-                        <div x-data="{ tbt: false }" class="flex flex-col items-center px-4 py-3 border border-solid border-primary-core-blue rounded-lg bg-light-gray cursor-pointer">
+                        <div x-data="{ tbt: false }" class="flex flex-col items-center px-4 py-3 border border-solid border-primary-core-blue rounded-lg bg-white cursor-pointer">
                         <button
             class="flex flex-col items-center px-4 py-3 border border-solid border-primary-core-blue hover:bg-quaternary-blue hover:text-white rounded-lg bg-white cursor-pointer focus:border-solid focus:border-2 focus:border-yellow-500"
             @click="tbt = !tbt"
@@ -334,7 +334,7 @@
             </div>
                         </div>
                         {# Cumulative Layout Shift #}
-                        <div x-data="{ cls: false }" class="flex flex-col items-center px-4 py-3 border border-solid border-primary-core-blue rounded-lg bg-light-gray cursor-pointer">
+                        <div x-data="{ cls: false }" class="flex flex-col items-center px-4 py-3 border border-solid border-primary-core-blue rounded-lg bg-white cursor-pointer">
                         <button
             class="flex flex-col items-center px-4 py-3 border border-solid border-primary-core-blue hover:bg-quaternary-blue hover:text-white rounded-lg bg-white cursor-pointer focus:border-solid focus:border-2 focus:border-yellow-500"
             @click="cls = !cls"
@@ -360,7 +360,7 @@
             </div>
                         </div>
                         {# Speed Index #}
-                        <div x-data="{ si: false }" class="flex flex-col items-center px-4 py-3 border border-solid border-primary-core-blue rounded-lg bg-light-gray cursor-pointer">
+                        <div x-data="{ si: false }" class="flex flex-col items-center px-4 py-3 border border-solid border-primary-core-blue rounded-lg bg-white cursor-pointer">
                         <button
                 class="flex flex-col items-center px-4 py-3 border border-solid border-primary-core-blue hover:bg-quaternary-blue hover:text-white rounded-lg bg-white cursor-pointer focus:border-solid focus:border-2 focus:border-yellow-500"
                 @click=" si = !si"
