--- a/_includes/_css-link.njk
+++ b/_includes/_css-link.njk
@@ -1,5 +1,6 @@
 <link href="/css/normalize.css" rel="stylesheet">
 <link href="/css/tailwind.css" rel="stylesheet">
+<link href="/css/digital-service-components.css" rel="stylesheet">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
