--- a/_layouts/layout.njk
+++ b/_layouts/layout.njk
@@ -21,16 +21,37 @@
     <link href="/pagefind/pagefind-ui.css" rel="stylesheet">
     {% include '_css-link.njk' %}
     {% include '_js-link.njk' %}
+    <style>
+      :root {
+          --primary-core-blue: #154973;
+          --secondary-core-blue: #457AA5;
+          --link-blue: #004DD1;
+          --tertiary-core-blue: #EFF6FB;
+          --quaternary-blue: #007AC2;
+          --core-accent-yellow: #FACE00;
+          --yellow-alert: #FFE396;
+          --black: #000000;
+          --darkest-gray: #242424;
+          --dark-gray: #62666A;
+          --mid-gray: #D0D0CE;
+          --light-gray: #EDEDED;
+          --white: #FFFFFF;
+          --dark-red-alert: #B32E31;
+          --light-red-alert: #FEC3C3;
+          --success-green: #329d08;
+          --warning-orange: #d4820c;
+        }
+    </style>
     <title>{{ title }}</title>
   </head>
   <body class="">
   <a href="#main-site-content-for-skiplink" class="sr-only focus:not-sr-only text-blue-700 underline">Skip to Main Content</a>
-    {# {% from '../_includes/_components.njk' import unav,nav,footer  %} #}
-    {# {% include 'unav-data.njk' %}
-     {% include 'nav-data.njk' %} #}
+     {% from '../_includes/_components.njk' import unav,global,footer  %} 
+      {{ unav({})}} 
+     {% include '_nav-data.njk' %} 
     <main class="" id="main-site-content-for-skiplink">
     {{ content | safe }}
     </main>
-    {# {% include 'footer-data.njk' %} #}
+    {% include '_footer-data.njk' %}
   </body>
 </html>
